examples/optionality/negative/wrapper_root/types.go
package wrapper_root

import jsonschema "github.com/tylergannon/go-gen-jsonschema"

type Config jsonschema.Optional[int]
